<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/main_btn_settings" />

    <Button
        android:id="@+id/btn_sys_kb_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_settings"
        android:text="@string/main_btn_sys_kb_setting_enabled" />

    <Button
            android:id="@+id/btn_sys_kb_accessibility_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sys_kb_setting"
            android:text="@string/main_btn_sys_kb_accessibility_setting_enabled" />

    <Button
            android:id="@+id/btn_sys_phone_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sys_kb_accessibility_setting"
            android:text="@string/main_btn_sys_phone_permission_activated" />
    <Button
            android:id="@+id/btn_power_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sys_phone_permission"
            android:text="@string/main_btn_power_manager_activated" />
    <Button
            android:id="@+id/btn_more_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_power_manager"
            android:text="@string/main_btn_more_settings" />
    <Button
        android:id="@+id/btn_test_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_more_settings"
        android:text="@string/main_btn_test_keyboard" />
    <View
        android:id="@+id/divider12"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/btn_test_key"
        android:background="?android:attr/listDivider" />

    <TextView
            android:id="@+id/tv_initial_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider12"
            android:text="@string/pref_first_install"  />
    <View
            android:id="@+id/divider15"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_initial_hint"
            android:background="?android:attr/listDivider" />
    <TextView
        android:id="@+id/manual_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider15"
        android:text="@string/main_manual_text"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:checked="true" />

    <TextView
        android:id="@+id/text_manual_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/manual_text"
        android:autoLink="web"
        android:text="@string/main_manual_link"
        android:textAlignment="center" />

    <View
        android:id="@+id/divider13"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/text_manual_link"
        android:background="?android:attr/listDivider" />
    <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider13"
            android:text="KeyoneKB2 Version: unversioned"  />
    <View
            android:id="@+id/divider14"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_version"
            android:background="?android:attr/listDivider" />

</RelativeLayout>